# physics2d

./: .gitignore  CMakeLists.txt  Physics2D.sublime-project  Physics2D.sublime-workspace  README.md
SDL3-w64/lib/pkgconfig/: sdl3.pc
include/: Clock.h  Clock.hpp  Entity.h  Game.h  GameLogics.h  RenderWindow.hpp  Utils.h
src/: Clock.cpp  RendererWindow.cpp  entity.cpp  game.cpp  gamelogics.cpp  main.cpp  renderwindow.cpp  utils.cpp
